# fcgene

./: 130716_fcGENE_supplement.docx  Makefile.in  README  README.md  config.h.in  configure  configure.ac  updates_in_new_versions.docx
src/: Makefile.in  argcv.cpp  argcv.h  beagle.cpp  beagle.h  bimbam.cpp  bimbam.h  bpar.cpp  bpar.h  config.h  config.h.in  cparse.cpp  cparse.h  fcgene.cpp  fcgene.h  fcgene1.cpp  genable.cpp  genable.h  general.cpp  general.h  gz_stream.cpp  gz_stream.h  haploview.cpp  haploview.h  helper.cpp  helper.h  machdat.cpp  machdat.h  machped.cpp  machped.h  machped1.cpp  matrix_def.cpp  matrix_def.h  minimac.cpp  minimac.h  plinkped.cpp  plinkped.h  plinksnp.cpp  plinksnp.h  readimpute.cpp  (+11 more)
